--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title> YesNeon Oy </title>
@@ -13,8 +14,9 @@
 		<header>
 				<nav>
 					<ul> 
-					  <li>YesNeon Oy</li>
+					  <li>Yes Neon Oy</li>
 					</ul>
+					<!--<br>Osaamista yli 30 vuoden kokemuksella-->
 				</nav>
 		</header>
 		<main>
@@ -25,7 +27,7 @@
 						<div class="text">
 							<p class="sidetext"> Yes Neon Oy <br>
 							Niementie 221, 15560 Nastola</p>
-							<p class=sidetext">Jukka Nissinen <br>
+							<p class=sidetext>Jukka Nissinen <br>
 							 0400 714355</p>
 							<p class=sidetext>yesneon@phnet.fi</p>
 						</div>
@@ -34,65 +36,72 @@
 					<h2> Tuotteet </h2>
 						<div class="text">
 							<ul>
-								<li><a href="#Kassavalo">Kassavalo</a></li>
-								<li><a href="#Valokupu">Valokupu</a></li>
-								<li><a href="#">Ledi Kassavalo</a></li>
-								<li><a href="#Restaurointi">Restaurointi</a></li>
-								<li><a href="#">Teippaukset</a></li>
-								<li><a href="#">yms</a></li>
+								<li><a href="#Kassavalot">Kassavalot</a></li>
+								<li><a href="#Valomainokset">Valomainokset</a></li>
+								<li><a href="#Teippaukset">Teippaukset</a></li>
+								<li><a href="#Kyltit">Kyltit</a></li>
+								<li><a href="#Valaistukset">Valaistukset</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 				<div id="RightContent">
 					<div class="item">
-						<h1>Esittely</h1>
-						<p class=text>Teemme teippaukset ja neontyöt 30 vuoden kokemuksella, teemme ja toimitamme myös erikois tilauksia. Ledivalot kuuluvat myös valikoimaamme</p>
+						<h2 id="Kassavalot">Kassavalot</h2>
+						<p class=text> Kassojen numerointiin ja aukiolon ilmaisuun.
+						</p>
+						<img src="pictures/kassavalo.png" alt="kassavalo">
+						<img src="pictures/kassavalo2.png" alt="kassavalo">
+						<img src="pictures/kassavalo3.png" alt="kassavalo">
 					</div>
 					<div class="item">
-						<h2 id="Kassavalo">Kassavalo</h2>
-						<p class=text> Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-												Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-												Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
+						<h2 id="Valomainokset">Valomainokset</h2>
+						<p class=text> Erilaisia valomainoksia. mm. Ledivalaistu irtokirjainkyltti asennettuna lipalle, 3-sivuinen valaistu kattokuutio ja Liikenneaseman irtokirjainkyltit.
 						</p>
-						<img src="pictures/bg.jpg" alt="kassavalo">
+						<img src="pictures/wipak.png" alt="valomainos">
+						<img src="pictures/wurth.png" alt="valomainos">
+						<img src="pictures/jaripekka.png" alt="valomainos">
+
 					</div>
 					<div class="item">
-						<h2 id="Valokupu">Valokupu</h2>
-						<p class=text> Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-												Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-												Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
+						<h2 id="Teippaukset">Teippaukset</h2>
+						<p class=text> 
+							Erilaisia teippauksia
 						</p>
-						<img src="pictures/bg.jpg" alt="kassavalo">
+						<img src="pictures/teippi.png" alt="valomainos teippaus">
+						<img src="pictures/rekka.png" alt="teippaukset">
 					</div>
 					<div class="item">
-						<h2 id="Restaurointi">Restaurointi</h2>
-						<p class=text> Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-												Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-												Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
-						Kassavalo toteutetaan ledeillä lorem ipsum lorem dorom salem
+						<h2 id="Kyltit">Kyltit</h2>
+						<p class=text> 
+							Kaksipuolinen ledivalaistu pöytäkyltti.Kyltin paksuus vain 10 mm.
 						</p>
-						<img src="pictures/bg.jpg" alt="kassavalo">
+						<img src="pictures/mecad.png" alt="sisäkyltti">
+						<p class=text> 
+							Kohokirjaimilla saa elävyyttä ja visuaalisuutta. Eri tyylit valittavissa.
+						</p>
+						<img src="pictures/muurame.png" alt="kohokirjain kyltti">
+						<p class=text> 
+							Taustavalaistu sisäkilpi yrityksen sisäänkäynnissä.
+						</p>
+						<img src="pictures/priocon.png" alt="kyltti">
+						<p class=text> 
+							Kohokirjaimia kyltteihin ja jyrsitty valaisinritilä.
+						</p>
+						<img src="pictures/irtokirjain.png" alt="irtokirjaimet">
+					</div>
+					<div class="item">
+						<h2 id="Valaistukset">Valaistukset</h2>
+						<p class=text> 
+							Valaistuksella näyttävyyttä erilaisten liikkeiden palvelutiskeihin.
+						</p>
+						<img src="pictures/palvelutiski.png" alt="valaistus">
+						<p class=text> 
+							Portaiden valaistus ledimoduleilla.Teho tässä toteutuksessa n.0,6 W porrasta kohden.
+						</p>
+						<img src="pictures/portaat.png" alt="valaistut portaat">
+
+						
 					</div>
 				</div>
 			</div>
