--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
 	<head>
 		<title> YesNeon Oy </title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="scripts.js"></script>
 		
-		<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Raleway|Lato' rel='stylesheet' type='text/css'> 
+		<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'> 
 
 	</head>
 	<body>
