--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<title> YesNeon Oy </title>
 		<meta charset="utf-8">
+		<meta name="description" content="Yes Neon valomainos ja ledivalo yritys">
+		<meta name="keywords" content="Valomainos,Ledi,Ledivalo,Valaistus,Kyltti,Teippaukset,Teippaus,YesNeon,Yes Neon,Kassavalo">
+		<meta name="author" content="Olli Nissinen">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="scripts.js"></script>
-		
 		<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'> 
-
 	</head>
 	<body>
 	
