--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title> YesNeon Oy </title>
 		<meta charset="utf-8">
 		<meta name="description" content="Yes Neon valomainos ja ledivalo yritys">
-		<meta name="keywords" content="Valomainos,Ledi,Ledivalo,Valaistus,Kyltti,Teippaukset,Teippaus,YesNeon,Yes Neon,Kassavalo">
+		<meta name="keywords" content="Valomainos,Ledi,Ledivalo,Valaistus,Kyltti,Teippaukset,Teippaus,YesNeon,Yes Neon,Kassavalo,Valolaatikko,Kassamerkkivalo,Mainos,Sisäkyltti,Opaste,Led,Kassapöytä,Palvelutiski">
 		<meta name="author" content="Olli Nissinen">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="scripts.js"></script>
@@ -48,6 +48,16 @@
 				</div>
 				<div id="RightContent">
 					<div class="item">
+						<br>
+						<p class=text>
+							Asiakkaskuntaamme kuuluu niin isot yritykset kuin yksityiset henkilöt. Toteutamme tilaukset suurista kokonaisuuksista aina pieniin korjaustöihin.
+						</p>
+						<p class=text>
+							Toimitamme erilaisia valomainoksia, valaistuja sisäkylttejä, huoneiston valaistuksia, monenlaisia teippauksia, asennuksia ja korjauksia.
+							Alla joitakin kuvia erilaisista toteutetuista töistä. 
+						</p>
+					</div>
+					<div class="item">
 						<h2 id="Kassavalot">Kassavalot</h2>
 						<p class=text> Kassojen numerointiin ja aukiolon ilmaisuun.
 						</p>
@@ -69,13 +79,15 @@
 								<td> <img src="pictures/wurth.png" alt="valomainos"> </td>
 								<td> <img src="pictures/jaripekka.png" alt="valomainos"> </td>
 							</tr>
+							<tr>
+								<td> <img src="pictures/rakuunantorppa.png" alt="valomainos"> </td>
+								<td> <img src="pictures/expert.png" alt="valomainos"> </td>
+								<td> <img src="pictures/vaatetustori.png" alt="valomainos"> </td>
+							</tr>
 						</table>
 					</div>
 					<div class="item">
 						<h2 id="Teippaukset">Teippaukset</h2>
-						<p class=text> 
-							Erilaisia teippauksia
-						</p>
 						<table>
 							<tr>
 								<td> <img src="pictures/teippi.png" alt="valomainos teippaus"> </td>
@@ -98,12 +110,12 @@
 							</tr>
 							<tr>
 								<td> <p class=centeredtext> Taustavalaistu sisäkilpi yrityksen sisäänkäynnissä.</p> </td>
-								<td></td>
+								<td> <p class=centeredtext> RGB ledeillä toteutettu sisäkyltti, paksuus 20mm. Toimii kaukosäätimellä.</p></td>
 								<td></td>
 							</tr>
 							<tr>
 								<td> <img src="pictures/priocon.png" alt="kyltti"> </td>
-								<td></td>
+								<td> <img src="pictures/seniorit.png" alt="kyltti"></td>
 								<td></td>
 							</tr>
 						</table>
