Old website has come to end of its road.
Changing to portfolio

--- a/index.html
+++ b/index.html
@@ -1,141 +1,9 @@
 <!DOCTYPE html>
 <html lang="fi">
 	<head>
-		<title> YesNeon Oy </title>
-		<meta charset="utf-8">
-		<meta name="description" content="Yes Neon valomainos ja ledivalo yritys">
-		<meta name="keywords" content="Valomainos,Ledi,Ledivalo,Valaistus,Kyltti,Teippaukset,Teippaus,YesNeon,Yes Neon,Kassavalo,Valolaatikko,Kassamerkkivalo,Mainos,Sisäkyltti,Opaste,Led,Kassapöytä,Palvelutiski">
-		<meta name="author" content="Olli Nissinen">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<script src="scripts.js"></script>
-		<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'> 
+		<title> Portfolio </title>
 	</head>
 	<body>
-	
-		<header>
-				<nav>
-					<ul> 
-					  <li>Yes Neon Oy</li>
-					  <li class="text">Osaamista yli 30-vuoden kokemuksella</li>
-					</ul>
-				</nav>
-		</header>
-		<main>
-			<div id="MainContainer">
-				<div id="LeftContent">
-					<div class="info">
-						<h2> Yhteystiedot </h2>
-						<div class="text">
-							<p class="sidetext"> Yes Neon Oy <br>
-							Niementie 221, 15560 Nastola</p>
-							<p class=sidetext>Jukka Nissinen <br>
-							 0400 714355</p>
-							<p class=sidetext>yesneon@phnet.fi</p>
-						</div>
-					</div>
-					<div class="info">
-					<h2> Tuotteet </h2>
-						<div class="text">
-							<ul>
-								<li><a href="#Kassavalot">Kassavalot</a></li>
-								<li><a href="#Valomainokset">Valomainokset</a></li>
-								<li><a href="#Teippaukset">Teippaukset</a></li>
-								<li><a href="#Kyltit">Kyltit</a></li>
-								<li><a href="#Valaistukset">Valaistukset</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div id="RightContent">
-					<div class="item">
-						<br>
-						<p class=text>
-							Asiakkaskuntaamme kuuluu niin isot yritykset kuin yksityiset henkilöt. Toteutamme tilaukset suurista kokonaisuuksista aina pieniin korjaustöihin.
-						</p>
-						<p class=text>
-							Toimitamme erilaisia valomainoksia, valaistuja sisäkylttejä, huoneiston valaistuksia, monenlaisia teippauksia, asennuksia ja korjauksia.
-							Alla joitakin kuvia erilaisista toteutetuista töistä. 
-						</p>
-					</div>
-					<div class="item">
-						<h2 id="Kassavalot">Kassavalot</h2>
-						<p class=text> Kassojen numerointiin ja aukiolon ilmaisuun.
-						</p>
-						<table>
-							<tr>
-								<td> <img src="pictures/kassavalo.png" alt="kassavalo"> </td>
-								<td> <img src="pictures/kassavalo2.png" alt="kassavalo"> </td>
-								<td> <img src="pictures/kassavalo3.png" alt="kassavalo"> </td>
-							</tr>
-						</table>
-					</div>
-					<div class="item">
-						<h2 id="Valomainokset">Valomainokset</h2>
-						<p class=text> Erilaisia valomainoksia. mm. Ledivalaistu irtokirjainkyltti asennettuna lipalle, 3-sivuinen valaistu kattokuutio ja Liikenneaseman irtokirjainkyltit.
-						</p>
-						<table>
-							<tr>
-								<td> <img src="pictures/wipak.png" alt="valomainos"> </td>
-								<td> <img src="pictures/wurth.png" alt="valomainos"> </td>
-								<td> <img src="pictures/jaripekka.png" alt="valomainos"> </td>
-							</tr>
-							<tr>
-								<td> <img src="pictures/rakuunantorppa.png" alt="valomainos"> </td>
-								<td> <img src="pictures/expert.png" alt="valomainos"> </td>
-								<td> <img src="pictures/vaatetustori.png" alt="valomainos"> </td>
-							</tr>
-						</table>
-					</div>
-					<div class="item">
-						<h2 id="Teippaukset">Teippaukset</h2>
-						<table>
-							<tr>
-								<td> <img src="pictures/teippi.png" alt="valomainos teippaus"> </td>
-								<td> <img src="pictures/rekka.png" alt="teippaukset"> </td>
-							</tr>
-						</table>
-					</div>
-					<div class="item">
-						<h2 id="Kyltit">Kyltit</h2>
-						<table>
-							<tr>
-								<td> <p class=centeredtext> Kaksipuolinen ledivalaistu pöytäkyltti.Kyltin paksuus vain 10 mm.</p> </td>
-								<td> <p class=centeredtext> Kohokirjaimilla saa elävyyttä ja visuaalisuutta. Eri tyylit valittavissa.</p> </td>
-								<td> <p class=centeredtext> Kohokirjaimia kyltteihin ja jyrsitty valaisinritilä. </p> </td>
-							</tr>
-							<tr>
-								<td> <img src="pictures/mecad.png" alt="sisäkyltti"> </td>
-								<td> <img src="pictures/muurame.png" alt="kohokirjain kyltti"> </td>
-								<td>  <img src="pictures/irtokirjain.png" alt="irtokirjaimet"> </td>
-							</tr>
-							<tr>
-								<td> <p class=centeredtext> Taustavalaistu sisäkilpi yrityksen sisäänkäynnissä.</p> </td>
-								<td> <p class=centeredtext> RGB ledeillä toteutettu sisäkyltti, paksuus 20mm. Toimii kaukosäätimellä.</p></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td> <img src="pictures/priocon.png" alt="kyltti"> </td>
-								<td> <img src="pictures/seniorit.png" alt="kyltti"></td>
-								<td></td>
-							</tr>
-						</table>
-						
-					</div>
-					<div class="item">
-						<h2 id="Valaistukset">Valaistukset</h2>
-						<table>
-							<tr>
-								<td> <p class=centeredtext> Valaistuksella näyttävyyttä erilaisten liikkeiden palvelutiskeihin.</p> </td>
-								<td> <p class=centeredtext> Portaiden valaistus ledimoduleilla.Teho tässä toteutuksessa n.0,6 W porrasta kohden.</p> </td>
-							</tr>
-							<tr>
-								<td> <img src="pictures/palvelutiski.png" alt="valaistus"> </td>
-								<td> <img src="pictures/portaat.png" alt="valaistut portaat"> </td>
-							</tr>
-						</table>
-					</div>
-				</div>
-			</div>
-		</main>
+		Content coming soon...
 	</body>
 </html>
